Fix overflowing artist and album title

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,9 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+*, *:before, *:after {
+  box-sizing: border-box;
+  flex-shrink: 0;
+  min-width: 0;
+}
